# aoc2022-ocaml

./: README.md  dune-project
inputs/: q07.txt
src/: dune  q01.ml
src/lib/: aocutils.ml
