(lang dune 3.8)

(name aoc2022)

(generate_opam_files false)

(source
 (github cosmicboots/aoc2022_ocaml))

(authors "Thom Dickson")

(maintainers "Thom Dickson")

(package
 (name aoc2022)
 (depends ocaml dune base stdio))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
